--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -1,167 +1,152 @@
-:root {
-    --typewriterSpeed:6s;
-}
-
-body{
-    margin: 0;
-    background: #FAF9F6;
-}
-
-
-
-
-.container_header{
-    width: 80%;
-    margin: 0 auto;
-}
-
-header{
-    background: #b3af9c;
-    height: 80px;
-}
-
-header::after {
-    content: '';
-    display: table;
-    clear: both;
-}
-
-.logo{
-    float: left;
-    margin: 20px 0;
-    padding:10px ;
-    font-family: 'Rampart One', cursive;
-    cursor: pointer;
-
-}
-
-span{
-    position: absolute;
-    transform: translate(-20%,-20%);
-    /* font-family: 'Poppins',sans-serif; */
-    font-size: 20px;
-    color: #e0e5eb;
-    text-shadow: 
-    -8px -8px 12px rgba(255,255,255,0.3),
-    8px 8px 12px rgba(0,0,0,0.08);
-    caret-color:#262626;
-    outline: none;
-}
-
-nav{
-    float: right;
-}
-
-nav ul {
-    margin: 0;
-    padding: 0;
+* {
+    /* margin: 0;
+    padding: 0; */
+    box-sizing: border-box;
     list-style: none;
 }
 
-nav li {
-    display: inline-block;
-    margin-left: 50px;
-    padding-top: 23px;
-
-    position: relative;
+body {
+    font-family: 'Open Sans', serif;
+    padding-top: 54px;
+    color: #fdfcfc;
+    background-color: #000000;
 }
 
-nav a {
-    color: #444;
-    font-family: 'Work Sans' sans-serif;
-    text-decoration: none;
+@media (min-width: 992px) {
+    body {
+        padding-top:0 ;
+        padding-left: 17rem;
+    }
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Saira Extra Condensed', serif;
+    font-weight: 700;
     text-transform: uppercase;
-    font-size: 18px;
-    font-weight: 400;
+    color: #e1e6e6;
 }
 
-nav a:hover {
-    color: #000;
+h1 {
+    font-size: 6rem;
+    line-height: 5.5rem;
 }
 
-nav a::before {
-    content: '';
-    display: block;
-    height: 5px;
-    width: 100%;
-    background-color: #444;
-
-    position: absolute;
-    top: 0;
-    width: 0%;
-
-    transition: all ease-in-out 200ms;
+h2 {
+    font-size: 3.5rem;
 }
 
-nav a:hover::before {
-    width: 100%;
+a{
+    color: #1DB954;
 }
 
-.container{
-    font-family: "Source Sans Pro", sans-serif;
-    margin: 0;
-    min-height: 80vh;
-    display: grid;
-    place-content: center;
+a:hover, a:focus, a:active {
+    color: #20753e;
+}
+
+.subheading {
+    text-transform: uppercase;
+    font-weight: 500;
+    font-family: 'Saira Extra Condensed', serif;
+    font-size: 1.35rem;
+}
+
+.list-social-icons a {
+    color: #495057;
+}
+
+.list-social-icons a:hover {
+    color: #1DB954;
+}
+
+.list-social-icons a .fa-lg {
+    font-size: 1.75rem;
+}
+
+.list-icons {
+    font-size: 3rem;
+}
+
+.list-icons .list-inline-item i:hover {
+    color: #1DB954;
+}
+
+#sideNav .navbar-nav .nav-item .nav-link {
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+.wrraper{
+    margin: 230px 0;
+}
+
+@media(min-width: 992px) {
+
+#sideNav {
     text-align: center;
-
-}
-
-h1{
-    font-size: clamp(2.5rem, 4vw, 5rem);
-    font-family: "Source Code Pro", monospace;
-    position: relative;
-    width: max-content;
-}
-
-h1::before,
-h1::after {
-    content: '';
-    position: absolute;
+    position: fixed;
     top: 0;
-    right: 0;
-    bottom: 0;
     left: 0;
+    display: flex;
+    flex-direction: column;
+    width: 17rem;
+    height: 100vh;
 }
 
-h1::before {
-    background: #FAF9F6;
-    animation: 
-        typewriter var(--typewriterSpeed) steps(31) 1s forwards;
+#sideNav .navbar-brand {
+    display: flex;
+    margin:auto auto 0;
+    padding: 0.5rem;
 }
 
-h1::after {
-    width: 0.125em;
-    background: black;
-    animation: 
-        typewriter var(--typewriterSpeed) steps(31) forwards 1s ,
-        blink 750ms steps(31) infinite;
+#sideNav .navbar-brand .img-profile {
+    max-width: 10rem;
+    max-height: 10rem;
+    border: 0.5rem solid rgba(255, 250, 250, 0.1);
 }
 
-.subtitle {
-    color: hsl(0 0% 0% / 0.7);
-    font-size: 2rem;
-    font-weight: 400;
-    opacity: 0;
-    transform: translateY(3rem);
-    animation: fadeInUp 2s ease calc(var(--typewriterSpeed) + 1.5s) forwards; 
+
+#sideNav .navbar-collapse {
+    display: flex;
+    align-items: flex-start;
+    flex-grow: 0;
+    width: 100%;
+    margin-bottom: auto; }
+    #sideNav .navbar-collapse .navbar-nav {
+    flex-direction: column;
+    width: 100%; }
+    #sideNav .navbar-collapse .navbar-nav .nav-item {
+        display: block; }
+        #sideNav .navbar-collapse .navbar-nav .nav-item .nav-link {
+        display: block; } 
+
 }
 
-@keyframes typewriter {
-    to {
-        left: 100%
+
+section.resume-section {
+    border-bottom: 1px solid #dee2e6;
+    border-top: 1px solid #dee2e6;
+    padding-top: 5rem !important;
+    padding-bottom: 5rem !important;
+}
+
+@media(min-width: 768px) {
+
+    section.resume-section {
+        min-height: 100vh;
     }
 }
 
-@keyframes blink {
-    to {
-        background: transparent;
+@media(min-width: 992px) {
+    section.resume-section {
+        padding-top: 3rem !important;
+        padding-bottom: 3rem !important;
     }
 }
 
-@keyframes fadeInUp {
-    to {
-        opacity: 1;
-        transform: translateY(0);
-    }
+.bg-primary {
+    background-image: linear-gradient(to bottom, rgba(29, 185, 84), black) !important;
 }
+
+
+
+
